@@ -11,12 +11,14 @@ function lib.table_update(t, t2)
     for k, v in pairs(t2) do
         t[k] = v
     end
+    return t
 end
 
 function lib.table_extend(t, t2)
     for _, v in ipairs(t2) do
         t[#t + 1] = v
     end
+    return t
 end
 
 function lib.contains(t, value)
